@@ -13,13 +13,14 @@
  */
 package org.gbif.search.es.event;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
+import java.util.List;
 import java.util.Set;
-import org.elasticsearch.index.query.QueryBuilders;
-import org.elasticsearch.search.sort.SortBuilders;
-import org.elasticsearch.search.sort.SortOrder;
+
+import co.elastic.clients.elasticsearch._types.SortOptions;
+import co.elastic.clients.elasticsearch._types.SortOrder;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
 import org.gbif.api.model.event.search.EventSearchParameter;
 import org.gbif.dwc.terms.DcTerm;
 import org.gbif.dwc.terms.DwcTerm;
@@ -361,17 +362,21 @@ public enum EventEsField implements EsField {
     ImmutableSet.of(EVENT_DATE, DATE_IDENTIFIED, MODIFIED, LAST_INTERPRETED, LAST_CRAWLED, LAST_PARSED);
 
   public static EventEsFieldMapper buildFieldMapper() {
-    return EventEsFieldMapper.builder()
-        .fullTextField(FULL_TEXT)
-        .geoShapeField(COORDINATE_SHAPE)
-        .geoDistanceField(COORDINATE_POINT)
-        .uniqueIdField(ID)
-        .defaultFilter(QueryBuilders.termQuery("type", "event"))
-        .defaultSort(ImmutableList.of(SortBuilders.fieldSort("event.yearMonthEventIDSort").order(SortOrder.ASC)))
-        .searchToEsMapping(SEARCH_TO_ES_MAPPING)
-        .dateFields(DATE_FIELDS)
-        .fieldEnumClass(EventEsField.class)
-        .build();
+    return new EventEsFieldMapper(
+        SEARCH_TO_ES_MAPPING,
+        DATE_FIELDS,
+        FULL_TEXT,
+        COORDINATE_POINT,
+        COORDINATE_SHAPE,
+        ID,
+        List.of(
+            SortOptions.of(
+                s ->
+                    s.field(
+                        f -> f.field("event.yearMonthEventIDSort").order(SortOrder.Asc)))),
+        Query.of(q -> q.term(t -> t.field("type").value("event"))),
+        EventEsField.class,
+        null);
   }
 
   @Override
